[gd_scene load_steps=5 format=3 uid="uid://bmlvbttxnvaqt"]

[ext_resource type="Script" path="res://Main.gd" id="1_h2g4y"]
[ext_resource type="Script" path="res://WorkField.gd" id="2_7sc12"]

[sub_resource type="InputEventKey" id="InputEventKey_p52xy"]
device = -1
keycode = 65
unicode = 97

[sub_resource type="Shortcut" id="Shortcut_mc4xs"]
events = [SubResource("InputEventKey_p52xy")]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_h2g4y")

[node name="WorkField" type="Node2D" parent="."]
script = ExtResource("2_7sc12")

[node name="ColorRect" type="ColorRect" parent="WorkField"]
offset_right = 1146.0
offset_bottom = 638.0
color = Color(1, 0, 1, 0.239216)

[node name="HUD" type="Control" parent="WorkField"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BoxContainer" type="BoxContainer" parent="WorkField/HUD"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 168.0
offset_bottom = 704.0
theme_override_constants/separation = 34
vertical = true

[node name="Clear" type="Button" parent="WorkField/HUD/BoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
action_mode = 0
text = "Clear"
icon_alignment = 1

[node name="Fill" type="Button" parent="WorkField/HUD/BoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Fill"

[node name="Colour" type="OptionButton" parent="WorkField/HUD/BoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
shortcut = SubResource("Shortcut_mc4xs")
item_count = 4
selected = 2
popup/item_0/text = "block_blue"
popup/item_0/id = 0
popup/item_1/text = "block_red"
popup/item_1/id = 1
popup/item_2/text = "block_auto"
popup/item_2/id = 2
popup/item_3/text = "coin"
popup/item_3/id = 3

[node name="InBox" type="BoxContainer" parent="WorkField/HUD/BoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0
vertical = true

[node name="Inlbl" type="Label" parent="WorkField/HUD/BoxContainer/InBox"]
layout_mode = 2
text = "In"

[node name="In" type="TextEdit" parent="WorkField/HUD/BoxContainer/InBox"]
custom_minimum_size = Vector2(2.08165e-12, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "3"

[node name="OutBox" type="BoxContainer" parent="WorkField/HUD/BoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0
vertical = true

[node name="Outlbl" type="Label" parent="WorkField/HUD/BoxContainer/OutBox"]
layout_mode = 2
text = "Out"

[node name="Out" type="TextEdit" parent="WorkField/HUD/BoxContainer/OutBox"]
custom_minimum_size = Vector2(2.08165e-12, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "3"

[node name="Save" type="Button" parent="WorkField/HUD/BoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Save"

[node name="Load" type="Button" parent="WorkField/HUD/BoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Load"

[node name="FileDialog" type="FileDialog" parent="WorkField"]
position = Vector2i(300, 300)
size = Vector2i(600, 600)

[node name="LoadFileDialog" type="FileDialog" parent="WorkField"]
title = "Open a File"
position = Vector2i(300, 300)
size = Vector2i(600, 600)
ok_button_text = "Открыть"
file_mode = 0

[connection signal="item_rect_changed" from="." to="." method="_on_item_rect_changed"]
[connection signal="pressed" from="WorkField/HUD/BoxContainer/Clear" to="WorkField" method="_on_clear_pressed"]
[connection signal="pressed" from="WorkField/HUD/BoxContainer/Fill" to="WorkField" method="_on_fill_pressed"]
[connection signal="item_selected" from="WorkField/HUD/BoxContainer/Colour" to="WorkField" method="_on_colour_item_selected"]
[connection signal="pressed" from="WorkField/HUD/BoxContainer/Save" to="WorkField" method="_on_save_pressed"]
[connection signal="pressed" from="WorkField/HUD/BoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="WorkField/HUD/BoxContainer/Load" to="WorkField" method="_on_load_pressed"]
[connection signal="file_selected" from="WorkField/FileDialog" to="WorkField" method="_on_file_dialog_file_selected"]
[connection signal="file_selected" from="WorkField/LoadFileDialog" to="WorkField" method="_on_load_file_dialog_file_selected"]
